...

  @override
  Widget build(BuildContext context) {
    final viewModel =
        Provider.of<NewPaymentSettingViewModel>(context, listen: false);
    return Scaffold(
      key: const Key('newPaymentSetting'),
      body: SafeArea(
        child: Padding(
          padding: appSymmetricHorizontalPadding,
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              InkWell(
                key: const Key('close'),
                onTap: viewModel.onClose,
                child: const IconBuilder(
                  iconData: Icons.close,
                ),
              ),
              verticalSpace(20),
...
