...
import 'package:flutter/material.dart' as _i6;
import 'package:flutter/material.dart';
import 'package:stacked/stacked.dart' as _i1;
import 'package:stacked_services/stacked_services.dart' as _i9;

class Routes {
  static const homeView = '/home-view';

  static const starupView = '/starup-view';

  static const loginView = '/login-view';

  static const newPaymentSettingView = '/new-payment-setting-view';
...
